--- a/Changelog.txt
+++ b/Changelog.txt
@@ -21,6 +21,7 @@ UseBB 0.6 Changelog
 - Fixed bug which doesn't return the user to previous page when logout was cancelled.
 - Fixed bug in regular expression for username search RewriteRule.
 - Fixed bad parsing of some entities in unhtml().
+- Fixed bug which made jump to top after inserting bbcode.
 - Fixed a few missing unhtml() calls.
 - Renamed kick_user_to_only_viewable_forum to single_forum_mode.
 - Do not add session ID's for Googlebot.
