--- a/Changelog.txt
+++ b/Changelog.txt
@@ -52,6 +52,7 @@ UseBB 0.6 Changelog
 - Also search in topic titles.
 - Code cleanups to session handler.
 - Auto login cookie now contains data in serialized array.
+- Birthday year input field replaced with select box.
 
 UseBB 0.5.1 Changelog
 ------------------------------
