--- a/Changelog.txt
+++ b/Changelog.txt
@@ -23,6 +23,7 @@ UseBB 0.6 Changelog
 - Fixed bug in regular expression for username search RewriteRule.
 - Fixed bad parsing of some entities in unhtml().
 - Fixed bug which made jump to top after inserting bbcode.
+- Fixed bug which changed members' post count when deleting with increase_post_count disabled.
 - Fixed a few missing unhtml() calls.
 - Fixed security issue with URL matching (XSS vulnerability in IE).
 - Renamed kick_user_to_only_viewable_forum to single_forum_mode.
