--- a/Changelog.txt
+++ b/Changelog.txt
@@ -6,6 +6,7 @@ UseBB 0.6 Changelog
 - Added ACP skeleton.
 - Added to ACP: system info.
 - Added to ACP: version check.
+- Added to ACP: general configuration.
 - Added to ACP: IP address lookup.
 - Added to ACP: SQL toolbox.
 - Added auto focus on many forms using improved template engine.
