--- a/Changelog.txt
+++ b/Changelog.txt
@@ -61,6 +61,7 @@ UseBB 0.6 Changelog
 - Auto login cookie now contains data in serialized array.
 - Birthday year input field replaced with select box.
 - RSS feed query rewrite, the feed now shows the x latest posts intead of updated topics.
+- Limit search results to x items.
 
 UseBB 0.5.1 Changelog
 ------------------------------
