--- a/Changelog.txt
+++ b/Changelog.txt
@@ -7,6 +7,8 @@ UseBB 0.6 Changelog
 - Added to ACP: system info.
 - Added to ACP: version check.
 - Added to ACP: general configuration.
+- Added to ACP: category management.
+- Added to ACP: forum management.
 - Added to ACP: IP address lookup.
 - Added to ACP: SQL toolbox.
 - Added auto focus on many forms using improved template engine.
@@ -62,6 +64,7 @@ UseBB 0.6 Changelog
 - Birthday year input field replaced with select box.
 - RSS feed query rewrite, the feed now shows the x latest posts intead of updated topics.
 - Limit search results to x items.
+- Don't compress <script />.
 
 UseBB 0.5.1 Changelog
 ------------------------------
