--- a/Changelog.txt
+++ b/Changelog.txt
@@ -67,6 +67,7 @@ UseBB 0.6 Changelog
 - Limit search results to x items.
 - Don't compress <script />.
 - Disable flood protection for admins and moderators.
+- Members can see their username next to their displayed name, just like admins can.
 
 UseBB 0.5.1 Changelog
 ------------------------------
