--- a/Changelog.txt
+++ b/Changelog.txt
@@ -69,6 +69,7 @@ UseBB 0.6 Changelog
 - Disable flood protection for admins and moderators.
 - Members can see their username next to their displayed name, just like admins can.
 - New redirect functions provide easier and more robust redirecting.
+- Don't try to get server load on Windows.
 
 UseBB 0.5.1 Changelog
 ------------------------------
