--- a/Changelog.txt
+++ b/Changelog.txt
@@ -36,6 +36,7 @@ UseBB 0.6 Changelog
 - Fixed some wrong sorting of categories and forums in various files.
 - Fixed a potentional Undefined index error on getnewpost.
 - Fixed URL make function to also urlencode variables in friendly URL's.
+- Fixed install/*.php to work on PHP 5.
 - Renamed kick_user_to_only_viewable_forum to single_forum_mode.
 - Do not add session ID's for Googlebot.
 - Statistics grammar change (singular vs plural).
