--- a/docs/INSTALL
+++ b/docs/INSTALL
@@ -11,7 +11,7 @@ UseBB works on PHP 5 (tested with 5.1.0b3).
 You might want to use install/install.php to quickly set up your board. Otherwise, you can follow these directions:
 
 1. Execute install/schemas/mysql.sql and install/usebb.sql on your database. Currently, UseBB needs 12 tables.
-2. Edit config.php to your preferences. You might want to use http://usebb.sourceforge.net/docs/doku.php?id=configuration:config.php_guide
+2. Rename config.php-dist to config.php and edit to your preferences. You might want to use http://usebb.sourceforge.net/docs/doku.php?id=configuration:config.php_guide
 3. Upload all the files to your host.
 4. Delete the directory install/ for security reasons.
 5. Chmod config.php so that it is writable by the webserver (try chmod 777).
