--- a/Changelog.txt
+++ b/Changelog.txt
@@ -3,6 +3,7 @@ $Header$
 UseBB 0.7 Changelog
 ------------------------------
 
+- Added ACP module system.
 - Fixed XSS vulnerability in search results.
 
 UseBB 0.6 Changelog
