--- a/Changelog.txt
+++ b/Changelog.txt
@@ -9,6 +9,7 @@ UseBB 0.7 Changelog
 - Fixed bug which didn't accept auth value 0 on edit forum form.
 - Fixed bug which returned empty page when member accesses ACP.
 - Fixed some auto focus and tabindex on post forms.
+- Fixed malfunctioning mark updated topics feature.
 - Renamed Jabber to Jabber/XMPP and made a FAQ entry about Google Talk.
 
 UseBB 0.6 Changelog
