--- a/Changelog.txt
+++ b/Changelog.txt
@@ -12,6 +12,7 @@ UseBB 0.7 Changelog
 - Fixed some auto focus and tabindex on post forms.
 - Fixed malfunctioning mark updated topics feature.
 - Fixed translating } and { when not needed (disabling Javascript in HTML posts).
+- Fixed bad styles on quote in preview box.
 - Include trailing / in BBCode URL's.
 - Renamed Jabber to Jabber/XMPP and made a FAQ entry about Google Talk.
 - Add Re: to RSS feed titles when applicable.
