--- a/Changelog.txt
+++ b/Changelog.txt
@@ -16,6 +16,7 @@ UseBB 0.7 Changelog
 - Include trailing / in BBCode URL's.
 - Renamed Jabber to Jabber/XMPP and made a FAQ entry about Google Talk.
 - Add Re: to RSS feed titles when applicable.
+- Removed obsolete username_max_length.
 
 UseBB 0.6 Changelog
 ------------------------------
