Added mark all as read feature in panel.

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -4,6 +4,7 @@ UseBB 0.7 Changelog
 ------------------------------
 
 - Added ACP module system.
+- Added mark all as read feature in panel.
 - Fixed XSS vulnerability in search results.
 - Fixed bug #658: search form gives error when no viewable forums.
 - Fixed bug #669: no newlines in quote tags cause problems.
