--- a/Changelog.txt
+++ b/Changelog.txt
@@ -14,6 +14,7 @@ UseBB 0.7 Changelog
 - Fixed malfunctioning mark updated topics feature.
 - Fixed translating } and { when not needed (disabling Javascript in HTML posts).
 - Fixed bad styles on quote in preview box.
+- Fixed get_config() to set some missing but required config settings.
 - Include trailing / in BBCode URL's.
 - Renamed Jabber to Jabber/XMPP and made a FAQ entry about Google Talk.
 - Add Re: to RSS feed titles when applicable.
