--- a/Changelog.txt
+++ b/Changelog.txt
@@ -12,6 +12,7 @@ UseBB 0.7 Changelog
 - Fixed bug #658: search form gives error when no viewable forums.
 - Fixed bug #669: no newlines in quote tags cause problems.
 - Fixed bug #687: mb_language(): Unknown language.
+- Fixed bug #707: Maximum execution time exceeded error on DNS lookup for Google.
 - Fixed bug #709: Undefined index on deleting (to) empty forum.
 - Fixed bug which didn't accept auth value 0 on edit forum form.
 - Fixed bug which returned empty page when member accesses ACP.
