--- a/Changelog.txt
+++ b/Changelog.txt
@@ -34,6 +34,7 @@ UseBB 0.7 Changelog
 - Make database password and table prefix mandatory.
 - Throw error when passwords are too short.
 - Don't require leading and trailing whitespace for smilies.
+- Give notice when trying to add forum when no category exists.
 
 UseBB 0.6 Changelog
 ------------------------------
