--- a/Changelog.txt
+++ b/Changelog.txt
@@ -35,6 +35,7 @@ UseBB 0.7 Changelog
 - Throw error when passwords are too short.
 - Don't require leading and trailing whitespace for smilies.
 - Give notice when trying to add forum when no category exists.
+- Better detect the board URL.
 
 UseBB 0.6 Changelog
 ------------------------------
