--- a/Changelog.txt
+++ b/Changelog.txt
@@ -5,6 +5,7 @@ UseBB 0.7 beta 2 Changelog
 
 - Fixed bug #738: subscription emails sent to [language_name].
 - Fixed bug #744: dollar sign followed by numerical value disappears.
+- Fixed bug #763: confusing IndexStats language value.
 - Fixed bad smiley parsing code.
 - Fixed missing friendly URL for "mark all as read".
 - Backtrace on error page.
