--- a/Changelog.txt
+++ b/Changelog.txt
@@ -15,6 +15,7 @@ UseBB 0.7 beta 2 Changelog
 - Don't use Location header on IIS.
 - Allow e-mail addresses with capital letters.
 - Parse www.example.com and ftp.example.com URL's.
+- Better detect missing or commented out config settings when writing.
 
 UseBB 0.7 beta 1 Changelog
 ------------------------------
