--- a/Changelog.txt
+++ b/Changelog.txt
@@ -17,6 +17,7 @@ UseBB 0.7 beta 2 Changelog
 - Parse www.example.com and ftp.example.com URL's.
 - Better detect missing or commented out config settings when writing.
 - Strip slashes from raw template content by default.
+- The system now produces an error when unwanted output was triggered.
 
 UseBB 0.7 beta 1 Changelog
 ------------------------------
