HTTP cache control headers added to output.

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -19,6 +19,7 @@ UseBB 0.7 beta 2 Changelog
 - Better detect missing or commented out config settings when writing.
 - Strip slashes from raw template content by default.
 - The system now produces an error when unwanted output was triggered.
+- HTTP cache control headers added to output.
 
 UseBB 0.7 beta 1 Changelog
 ------------------------------
