--- a/Changelog.txt
+++ b/Changelog.txt
@@ -12,6 +12,7 @@ UseBB 0.7 beta 2 Changelog
 - Fixed bug #763: confusing IndexStats language value.
 - Fixed bad smiley parsing code.
 - Fixed missing friendly URL for "mark all as read".
+- Fixed file not found error on install.php.
 - Remove the extension check on images.
 - Hide forum index link in breadcrumbs on single forum mode.
 - Don't use Location header on IIS.
