--- a/AUTHORS
+++ b/AUTHORS
@@ -1,27 +1,28 @@
 UseBB is brought to you with the help of numerous people.
 
-Please see http://www.usebb.net/about/team.php for a list of
+Please see http://www.usebb.net/community/members.php?act=staff for a list of
 people involved in UseBB's development.
 
-Also thanks to many people helping us by reporting bugs,
-giving feature suggestions and various pieces of helpful code.
+Also thanks to many people helping us by reporting bugs, giving feature
+suggestions and various pieces of helpful code.
 
 ---
 
 Code Credits
 
-Smilies are copyrighted by aiwebs.co.nz and distributed under
-the terms of the GNU General Public License.
-
-Javascript insert_tags() function copyrighted by the DokuWiki
-development team and distributed under the terms of the
+Smilies are copyrighted by aiwebs.co.nz and distributed under the terms of the
 GNU General Public License.
 
-Several regexes for URL and e-mail address matching copyrighted
-by the phpBB Group and distributed under the terms of the
-GNU General Public License.
+Javascript insert_tags() function copyrighted by the DokuWiki development team
+and distributed under the terms of the GNU General Public License.
+
+Several regexes for URL and e-mail address matching copyrighted by the phpBB
+Group and distributed under the terms of the GNU General Public License.
+
+Other small portions of code may be borrowed from other GPL licensed projects.
+These portions are commented with the location of the original source.
 
 ---
 
-Last but not least, thanks to Sourceforge.net for partially
-hosting the project and making UseBB's development possible.
+Last but not least, thanks to Sourceforge.net for hosting file releases and CVS
+and making UseBB's development possible.
