--- a/Changelog.txt
+++ b/Changelog.txt
@@ -5,6 +5,7 @@ UseBB 0.7 beta 3 Changelog
 
 - Fixed XSS vulnerability with $_SERVER['PHP_SELF'].
 - Fixed bug #805: General Error on iso-8859-8-i encoding.
+- mod_rewrite URLs now also match when followed by a non-word character.
 
 UseBB 0.7 beta 2 Changelog
 ------------------------------
