Minor template improvements.

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -6,6 +6,7 @@ UseBB 0.7 beta 3 Changelog
 - Fixed XSS vulnerability with $_SERVER['PHP_SELF'].
 - Fixed bug #805: General Error on iso-8859-8-i encoding.
 - mod_rewrite URLs now also match when followed by a non-word character.
+- Minor template improvements.
 
 UseBB 0.7 beta 2 Changelog
 ------------------------------
