--- a/Changelog.txt
+++ b/Changelog.txt
@@ -7,6 +7,7 @@ UseBB 0.7 beta 3 Changelog
 - Fixed bug #805: General Error on iso-8859-8-i encoding.
 - mod_rewrite URLs now also match when followed by a non-word character.
 - Allow spaces in usernames (not transformed to underscores).
+- Don't focus on user name when box when filled in from session.
 - Minor template improvements.
 
 UseBB 0.7 beta 2 Changelog
