--- a/docs/INSTALL
+++ b/docs/INSTALL
@@ -6,7 +6,9 @@ Until UseBB is in a stable state, this guide will remain very simple.
 Before installing UseBB, make sure your host accords to the minimal system requirements.
 * Minimal: HTTP-server supporting PHP, PHP 4.1.0, MySQL 3.23
 * Recommended: GNU/Linux, most recent versions of Apache, PHP and MySQL
-UseBB works on PHP 5 (tested with 5.1.0b3).
+
+UseBB is being tested continually with recent versions of PHP 4 and MySQL 4.0.
+It was also tested and confirmed to work on PHP 5.1.0RC4 with MySQL 4.1.15 using the mysqli driver.
 
 You might want to use install/install.php to quickly set up your board. Otherwise, you can follow these directions:
 
