--- a/Changelog.txt
+++ b/Changelog.txt
@@ -9,6 +9,7 @@ UseBB 0.7 beta 3 Changelog
 - Fixed malfunctioning mysqli driver.
 - mod_rewrite URLs now also match \.html?\W*.
 - Allow spaces in usernames (not transformed to underscores).
+- Allow HTML in ranks.
 - Don't focus on user name when box when filled in from session.
 - Minor template improvements.
 
