Added to ACP: edit member feature.

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -3,9 +3,10 @@ $Header$
 UseBB 0.7 final Changelog
 ------------------------------
 
-- Added moderator control on forum edit form.
-- Added move moderators option on deleting forum.
-- Added username search on IP-address in ACP.
+- Added to ACP: edit member feature.
+- Added to ACP: moderator control on forum edit form.
+- Added to ACP: move moderators option on deleting forum.
+- Added to ACP: username search on IP-address.
 - Fixed XSS vulnerability with $_SERVER['PHP_SELF'].
 - Fixed bug #805: General Error on iso-8859-8-i encoding.
 - Fixed bug #809: exec() has been disabled for security reasons.
