--- a/Changelog.txt
+++ b/Changelog.txt
@@ -13,6 +13,7 @@ UseBB 0.7 final Changelog
 - Fixed bug #809: exec() has been disabled for security reasons.
 - Fixed malfunctioning mysqli driver.
 - Fixed non unhtml'ed board name and description.
+- Fixed some bugs in MySQL drivers.
 - Some fixes to make intern installer work.
 - mod_rewrite URLs now also match \.html?\W*.
 - Allow spaces in usernames (not transformed to underscores).
