--- a/Changelog.txt
+++ b/Changelog.txt
@@ -3,6 +3,7 @@ $Header$
 UseBB 0.8 beta 1 Changelog
 ------------------------------
 
+- Added edit member shortcut on profile.
 - Fixed bug #868: ini_set() disabled for security.
 
 UseBB 0.7 final Changelog
