--- a/Changelog.txt
+++ b/Changelog.txt
@@ -6,6 +6,7 @@ UseBB 0.8 beta 1 Changelog
 - Added allow_duplicate_emails config value.
 - Added edit member shortcut on profile.
 - Fixed bug #868: ini_set() disabled for security.
+- Fixed some bad handling of input on member editing.
 
 UseBB 0.7 final Changelog
 ------------------------------
