--- a/Changelog.txt
+++ b/Changelog.txt
@@ -3,6 +3,7 @@ $Header$
 UseBB 0.8 Changelog
 ------------------------------
 
+- Added admin activation.
 - Added to ACP: register members.
 - Added to ACP: activate members.
 - Added to ACP: delete members.
@@ -13,6 +14,8 @@ UseBB 0.8 Changelog
 - Fixed bug #889: moving moderators may cause duplicates.
 - Fixed some bad handling of input on member editing.
 - Fixed ACP module handling to allow _-. in short names.
+- Fixed some bugs on the user panel.
+- Fixed some translation errors.
 - Better module overview.
 - Don't warn about disabled ini_get() and exec().
 - Some additional confirmation messages in the ACP.
