--- a/Changelog.txt
+++ b/Changelog.txt
@@ -7,9 +7,11 @@ UseBB 0.8 Changelog
 - Added to ACP: register members.
 - Added to ACP: activate members.
 - Added to ACP: delete members.
+- Added to ACP: forum pruning.
 - Added translation helper module.
 - Added allow_duplicate_emails config value.
 - Added edit member shortcut on profile.
+- Added database table shortcuts on SQL toolbox.
 - Fixed bug #868: ini_set() disabled for security.
 - Fixed bug #882: SQL error on edit members with custom table prefix.
 - Fixed bug #889: moving moderators may cause duplicates.
