--- a/docs/INSTALL
+++ b/docs/INSTALL
@@ -10,13 +10,24 @@ Before installing UseBB, make sure your host accords to the minimal system requi
 UseBB is being tested continually with recent versions of PHP 4 with MySQL 4.0,
 and PHP 5.1.1 with MySQL 4.1.15 using the mysqli driver.
 
-You might want to use install/index.php to quickly set up your board. Otherwise, you can follow these directions:
+--------------------------------------
 
-1. Execute install/schemas/mysql.sql and install/usebb.sql on your database.
-2. Rename config.php-dist to config.php and edit to your preferences.
-	You might want to use http://usebb.sourceforge.net/docs/doku.php?id=configuration:config.php_guide
-3. Upload all the files to your host.
-4. Delete the directory install/ for security reasons.
-5. Chmod config.php so that it is writable by the webserver (try chmod 0777).
-6. Register a first user. It will automatically be an administrator.
-7. Test UseBB.
+To install UseBB, you have two choices:
+
+- Use the automatic installer:
+	1. Rename config.php-dist to config.php.
+	2. Chmod config.php so that it is writable by the webserver (try chmod 0777).
+	3. Use the installation wizard, located at install/index.php.
+
+	-OR-
+
+- Install the board manually:
+	1. Execute install/schemas/mysql.sql and install/usebb.sql on your database.
+	2. Rename config.php-dist to config.php and edit to your preferences.
+	3. Upload all the files to your host.
+	4. Delete the directory install/ for security reasons.
+	5. Chmod config.php so that it is writable by the webserver (try chmod 0777).
+	6. Register a first user. It will automatically be an administrator.
+
+--
+http://www.usebb.net
