--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,5 +1,10 @@
 $Header$
 
+UseBB 1.0 Changelog
+------------------------------
+
+- Added error upon lost saltcode when registering.
+
 UseBB 0.8 Changelog
 ------------------------------
 
