--- a/Changelog.txt
+++ b/Changelog.txt
@@ -3,6 +3,7 @@ $Header$
 UseBB 1.0 Changelog
 ------------------------------
 
+- Fixed bug #971: Undefined index: id upon creating forum.
 - Added error upon lost saltcode when registering.
 - Make trigger_error() errors E_USER_ERROR.
 
