--- a/Changelog.txt
+++ b/Changelog.txt
@@ -3,6 +3,7 @@ $Header$
 UseBB 1.0 Changelog
 ------------------------------
 
+- Added searching and detailed sorting on member list.
 - Added forum pruning by locking topics.
 - Fixed bug #971: Undefined index: id upon creating forum.
 - Added error upon lost saltcode when registering.
