--- a/Changelog.txt
+++ b/Changelog.txt
@@ -6,6 +6,7 @@ UseBB 1.0 Changelog
 - Added searching and detailed sorting on member list.
 - Added forum pruning by locking topics.
 - Fixed bug #971: Undefined index: id upon creating forum.
+- config.php must no longer be writable by PHP.
 - Added error upon lost saltcode when registering.
 - Make trigger_error() errors E_USER_ERROR.
 - Various template improvements.
