--- a/Changelog.txt
+++ b/Changelog.txt
@@ -11,6 +11,7 @@ UseBB 1.0 Changelog
 - Added error upon lost saltcode when registering.
 - Make trigger_error() errors E_USER_ERROR.
 - Various template improvements.
+- <label for="..."> replaced by nesting <label> tags.
 
 UseBB 0.8 Changelog
 ------------------------------
