--- a/Changelog.txt
+++ b/Changelog.txt
@@ -8,6 +8,7 @@ UseBB 1.0 Changelog
 - Added forum pruning by locking topics.
 - Added sorting options on search form.
 - Added possibility to show search results as posts.
+- Added settings to enable/disable IP bans and badwords filter.
 - Fixed bug #992: RSS feed redirects on restricted board.
 - Fixed bug #988: default timezone for members not set.
 - Fixed bug #964: white space in IE before tables in ACP.
